<resources>
    <string name="app_name">TaskDemo</string>

    <string name="action_settings">Settings</string>
    <string name="action_manage">Manage Account</string>


    <string name="hello_world">Hello world!</string>

    <string name="hello">Sample Android Design Support Library App</string>

    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snacksbar">Snack bar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>
    <string name="product">Product</string>
    <string name="bagStore">Bag Store</string>

    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="username_required">Username cannot be blank</string>
    <string name="password_required">Password cannot be blank</string>
    <string name="username_password_required">Username and Password cannot be blank</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="successfull_login">You are successfully logged in</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="email_should_be_gmail">Email should be in gmail.com format</string>
    <string name="internet_connection_not_available">No Internet Connection available. Please check your connection.</string>
    <string name="token_cannot_be_empty">Token can not be Empty</string>
    <string name="password_requirement_not_met">Password requirement not met</string>

    <string name="setting">Setting</string>
    <string name="discover">Discover</string>
    <string name="profile_info">Personal Info</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="geo_map">Geo fencing</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="blocked_list">Blocked List</string>
    <string name="account_security">Account Security</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="notification">Notification</string>
    <string name="google_map">Google Map</string>
    <string name="general_setting">General Settings</string>
    <string name="dark_mode">Dark Mode</string>

</resources>